[package]
name = "moq-ffi"
description = "Media over QUIC, UniFFI bindings"
authors = ["Luke Curley <kixelated@gmail.com>", "Brian Medley <bpm@bmedley.org>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.2.21"
edition = "2024"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[lib]
name = "moq_ffi"
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "./uniffi-bindgen.rs"

[features]
android-logcat = ["moq-native/android-logcat"]

[dependencies]
bytes = "1"
hang = { workspace = true }
moq-audio = { workspace = true }
moq-mux = { workspace = true }
moq-native = { workspace = true, default-features = true }
moq-net = { workspace = true, features = ["serde"] }
thiserror = "2"
tokio = { workspace = true, features = ["macros"] }
tracing = "0.1"
uniffi = { version = "0.31", features = ["cli"] }
url = "2"

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }

[dev-dependencies]
pollster = "0.4"
