[package]
name = "moq-flate"
description = "Group-scoped DEFLATE: a stream of self-delimited frames sharing one compression window."
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.1.0"
edition = "2024"
rust-version.workspace = true

keywords = ["deflate", "compression", "streaming", "live"]
categories = ["compression"]

[lib]
doctest = false

[dependencies]
bytes = "1"
flate2 = { workspace = true }
thiserror = "2"
