[package]
name = "moq-gst"
description = "Media over QUIC - GStreamer plugin"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/moq"
license = "MIT OR Apache-2.0"

version = "0.2.2"
edition = "2021"
rust-version.workspace = true
publish = false

[lib]
name = "gstmoq"
crate-type = ["cdylib", "rlib"]
test = false
doctest = false

[dependencies]

anyhow = { version = "1", features = ["backtrace"] }
bytes = "1"
gst = { package = "gstreamer", version = "0.23" }
hang = { workspace = true }
moq-lite = { workspace = true }
moq-mux = { workspace = true }
moq-native = { workspace = true, default-features = true }
tokio = { workspace = true, features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"

[build-dependencies]
gst-plugin-version-helper = "0.8"
