[package]
name = "moq-hls"
description = "HLS / LL-HLS gateway for Media over QUIC"
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.0.1"
edition = "2024"
rust-version.workspace = true

keywords = ["hls", "ll-hls", "moq", "media", "cmaf"]
categories = ["multimedia", "network-programming", "web-programming"]

[lib]
doctest = false

[features]
default = ["server"]
server = ["dep:axum"]

[dependencies]
# Always required (import + export library).
anyhow = { version = "1", features = ["backtrace"] }

# Only needed by the HTTP export server (gated by `server`).
axum = { version = "0.8", features = ["tokio"], optional = true }
bytes = "1"
hang = { workspace = true }
kio = { workspace = true }
m3u8-rs = "6"
moq-mux = { workspace = true }
moq-net = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "gzip"] }
thiserror = "2"
tokio = { workspace = true, features = ["full"] }
tracing = "0.1"
url = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
