[package]
name = "moq-json"
description = "Snapshot/delta JSON publishing over MoQ tracks using RFC 7396 JSON Merge Patch."
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.0.3"
edition = "2024"
rust-version.workspace = true

keywords = ["quic", "http3", "webtransport", "json", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[lib]
doctest = false

[dependencies]
bytes = "1"
json-patch = "4"
kio = { workspace = true }
moq-net = { workspace = true }
serde = { workspace = true }
serde_json = "1"
thiserror = "2"
