[package]
name = "moq-lite"
description = "Deprecated: renamed to moq-net. This crate re-exports moq-net for backwards compatibility and will not receive further updates."
authors = ["Luke Curley"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.17.0"
edition = "2024"
rust-version.workspace = true

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[lib]
test = false
doctest = false

[features]
serde = ["moq-net/serde"]

[dependencies]
moq-net = { workspace = true }
