[package]
name = "moq-msf"
description = "MOQT Streaming Format (MSF) catalog types"
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.1.1"
edition = "2024"
rust-version.workspace = true

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[dependencies]
serde = { workspace = true }
serde_json = "1"
serde_with = "3"
