[package]
name = "moq-mux"
description = "Media muxers and demuxers for MoQ"
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.5.1"
edition = "2024"
rust-version.workspace = true

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[lib]
doctest = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = "0.22"
bytes = "1"
h264-parser = { version = "0.4.0" }
hang = { workspace = true }
kio = { workspace = true }
m3u8-rs = { version = "6" }
moq-loc = { workspace = true }
moq-msf = { workspace = true }
moq-net = { workspace = true, features = ["serde"] }
mp4-atom = { version = "0.11", features = ["tokio", "bytes", "serde"] }
num_enum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }
scuffle-av1 = { version = "0.1.4" }
scuffle-h265 = { version = "0.2.2" }
thiserror = "2"
tokio = { workspace = true, features = ["macros", "fs"] }
tracing = "0.1"
url = "2"
webm-iterable = "0.6"

[dev-dependencies]
futures = "0.3"
tokio = { workspace = true, features = ["test-util"] }
