[package]
name = "moq-mux"
description = "Media muxers and demuxers for MoQ"
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.7.0"
edition = "2024"
rust-version.workspace = true

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[lib]
doctest = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = "0.22"
bytes = "1"
h264-parser = { version = "0.4.0" }
hang = { workspace = true }
kio = { workspace = true }
memchr = "2"
moq-json = { workspace = true }
moq-loc = { workspace = true }
moq-msf = { workspace = true }
moq-net = { workspace = true, features = ["serde"] }
mp4-atom = { version = "0.11", features = ["tokio", "bytes", "serde"] }
mpeg2ts = "0.6.0"
num_enum = "0.7"
scuffle-av1 = { version = "0.1.4" }
scuffle-h265 = { version = "0.2.2" }
serde = { workspace = true }
serde_json = "1"
serde_with = { version = "3", features = ["base64"] }
thiserror = "2"
tokio = { workspace = true, features = ["macros"] }
tracing = "0.1"
url = "2"
webm-iterable = "0.6"

[dev-dependencies]
futures = "0.3"
tokio = { workspace = true, features = ["test-util"] }
